--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ matplotlib==3.4.1
 pandas==1.2.4
 jupyterlab-widgets==1.0.0
 ipywidgets==7.6.3
+scikit-learn==0.24.1
+geopandas==0.9.0
+hdx-python-country==2.8.5
